k8s/ollama/ollama-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-nodeport
  namespace: ollama
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ollama
  ports:
    - port: 11434
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 11434
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
